[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reportnet"
version = "0.1.0"
description = "Python client library for the EEA Reportnet 3 REST API"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dataframe = ["narwhals>=1.0", "polars>=0.20"]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "ruff",
    "mypy",
    "narwhals>=1.0",
    "polars>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reportnet"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
mypy_path = "src"
