[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reportnet"
version = "0.1.0"
description = "Python client library for the EEA Reportnet 3 REST API"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dataframe = ["narwhals>=1.0", "polars>=0.20"]
keyring = ["keyring>=24"]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "ruff",
    "mypy",
    "narwhals>=1.0",
    "polars>=0.20",
    "keyring>=24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reportnet"]

[tool.pytest.ini_options]
markers = ["integration: live API tests (require keyring credentials and network access)"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/reportnet/providers.py" = ["E501"]  # data table — long lines are intentional

[tool.mypy]
strict = true
mypy_path = "src"
