[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reportnet-client"
version = "0.3.0"
description = "Python client library for the EEA Reportnet 3 REST API"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dataframe = ["narwhals>=1.0", "polars>=0.20"]
keyring = ["keyring>=24"]
spatial = ["geopandas>=0.14"]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "ruff",
    "mypy",
    "narwhals>=1.0",
    "polars>=0.20",
    "keyring>=24",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
explore = [
    "marimo>=0.9",
    "polars>=0.20",
    "narwhals>=1.0",
    "matplotlib>=3.7",
    {include-group = "dev"},
]

[tool.hatch.build.targets.wheel]
packages = ["src/reportnet"]

[tool.pytest.ini_options]
markers = ["integration: live API tests (require keyring credentials and network access)"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/reportnet/providers.py" = ["E501"]  # data table — long lines are intentional

[tool.mypy]
strict = true
mypy_path = "src"
